src/Fight/Fight.css
.Fight-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    min-height: 10vh;
    padding: 5px;
  }

.trainerBlock {
  display: flex;
  justify-content: end;
  align-items: end;
}

.fightCard {
  display: flex;
  height: 225px;
  overflow: hidden;
  align-items: end;
  justify-content: end;
  font-size: clamp(20px,1vw,24px);
  font-weight: 700;
  white-space: nowrap;
  border: solid thick blue;
  background-color: #77D5D5;
  color: black;
  border-radius: 5px;
  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.091);
  padding-bottom: 5px;
}


.fightCard-left {
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
}

.fightCard-right {
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}

.queue {
  display: flex;
  flex-direction: row-reverse;
  position: relative;
}

.monQueue {
  display: flex;
  align-items: end;
  height: fit-content
}

.monQueueCenter {
  width:"100%";
  display:"flex";
  align-items:"center"
}

.queueCard {
  width: 96px;
  height: 96px;
  background-color: #77D5D5;
  border: solid 1px blue;
  border-radius: 25px;
  box-shadow: 5px 5px 5px rgba(255, 255, 255, 0.091);
  z-index: 0;
  position: relative;
}

.queueCard:hover {
  z-index: 1;
}

.circle {
  border-radius: 50%;
  max-width: 8px;
  height: 8px;
}

.stat-shorthand {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: 5px;
}

.active {
  background-color: #83EA83;
}

.alive {
  background-color: #77D5D5;
}

.defeated {
  background-color: #fb8585;
}

.trainerImg {
  height: 160px;
  width: 160px;
}

.monImg {
  height: 160px;
  width: 160px;
}

.healthbar-container {
  position: relative;
  margin: 5px;
  height: 30px;
  width: 140px;
  z-index: 0;
}

.healthbar {
  position: absolute;
  width: 100px;
  background-color: red;
  height: 30px;
  border-radius: 20px;
}

.healthbar-text {
  height: 30px;
  width: 100px;
  position: absolute;
  justify-content: center;
  z-index: 1;
}

